public class Estacao {
    private String nome;

    public Estacao(String nome) {
        this.nome = nome;
    }

    public String getNome() {
        return nome;
    }
}
